[project]
name = "lueur-cli-doc"
version = "0.1.3"
description = "Default template for PDM package"
authors = [
    {name = "Sylvain Hellegouarch", email = "sylvain@lueur.dev"},
]
dependencies = ["mkdocs>=1.6.1", "mkdocs-material>=9.5.48"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache-v2"}


[tool.pdm]
distribution = false
